<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="einscannen"
        android:enabled="true"
        android:icon="@mipmap/shortcut_scanning"
        android:shortcutShortLabel="@string/einscannen"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.rommelbendel.scanQ"
            android:targetClass="com.rommelbendel.scanQ.Haupt1">
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="Quiz"
        android:enabled="true"
        android:icon="@mipmap/shortcut_quiz"
        android:shortcutShortLabel="@string/shortcut_quiz"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.rommelbendel.scanQ"
            android:targetClass="com.rommelbendel.scanQ.QuizSettings">
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="Vokabeln"
        android:enabled="true"
        android:icon="@mipmap/shortcut_vocs"
        android:shortcutShortLabel="@mipmap/shortcut_vocs"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.rommelbendel.scanQ"
            android:targetClass="com.rommelbendel.scanQ.CategoryOverview"/>
    </shortcut>
</shortcuts>