<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:elevation="3dp"
                app:cardCornerRadius="3dp"
                app:cardUseCompatPadding="true" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/neue_vokabel"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp" />

                    <EditText
                        android:id="@+id/inputEnglisch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="15dp"
                        android:autoLink="all"
                        android:autofillHints="true"
                        android:background="@null"
                        android:hint="@string/Englisch"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColor="#000" />

                    <EditText
                        android:id="@+id/inputDeutsch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="15dp"
                        android:autoLink="all"
                        android:autofillHints="true"
                        android:background="@null"
                        android:hint="@string/Deutsch"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColor="#000" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="15dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Kategorie"
                            android:padding="5dp"
                            android:textSize="18sp"/>
                        <Spinner
                            android:id="@+id/categorySelection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:padding="5dp"/>

                        <ImageButton
                            android:id="@+id/addCategoryButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:src="@drawable/ic_action_icon"
                            android:contentDescription="@string/neue_kategorie"
                            android:layout_marginStart="20dp"
                            android:layout_gravity="center"
                            android:focusable="true"
                            android:clickable="true"/>
                    </LinearLayout>

                    <RadioButton
                        android:id="@+id/radioButton_markierung"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:padding="5dp"
                        android:text="@string/markiert"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        style="?android:attr/buttonBarButtonStyle">

                        <Button
                            android:id="@+id/button_abbrechen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/abbrechen"
                            style="?android:attr/buttonBarButtonStyle"/>

                        <Button
                            android:id="@+id/button_ok"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@android:string/ok"
                            style="?android:attr/buttonBarButtonStyle"/>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>