<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorText">

    <include
        android:id="@+id/waiting"
        android:visibility="gone"
        layout="@layout/nav_wait_for_you_to_join"/>

    <include
        android:id="@+id/waiting_end"
        android:visibility="gone"
        layout="@layout/nav_wait_to_end_turn"/>

    <include
        android:id="@+id/online_result_card"
        layout="@layout/nav_result_card_online" />

    <include
        android:id="@+id/player_left"
        android:visibility="gone"
        layout="@layout/nav_player_left" />

    <androidx.cardview.widget.CardView
        android:id="@+id/resultCard1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:visibility="visible"
        app:cardElevation="22dp"
        app:layout_constraintTop_toTopOf="@id/guideline8"
        tools:layout_editor_absoluteX="20dp"
        tools:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/succsess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/gratualtion"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="55sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/du_hast"
                android:textAlignment="center"
                android:textSize="38sp" />

            <TextView
                android:id="@+id/countRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_2_fragen_richtig"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/countWrong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_0_fragen_falsch"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/geloest"
                android:textAlignment="center"
                android:textSize="38sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/restart1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="7dp"
                    android:text="@string/wiederholen"
                    android:textColor="#ffffff"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/questionCard1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="40dp"
        android:backgroundTint="#ffffff"
        app:cardElevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/frage_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                android:text="@string/was_bedeutet"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />

            <View
                android:id="@+id/separator"
                android:layout_width="fill_parent"
                android:layout_height="1.1dp"
                android:layout_marginHorizontal="17dp"
                android:layout_marginTop="20dp"
                android:background="#b0b8b6"
                android:visibility="visible" />

            <TextView
                android:id="@+id/voc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="25dp"
                android:elevation="100dp"
                android:longClickable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/input_voice_to_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:autoLink="all"
                android:background="@null"
                android:inputType="textVisiblePassword"
                android:hint="@string/warte_auf_spracheingabe"
                android:padding="5dp"
                android:textColor="#000" />

            <!--ImageButton
                android:id="@+id/button_voice_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@android:drawable/ic_btn_speak_now"
                android:backgroundTint="@color/colorPrimaryDark"
                android:clickable="true"
                android:contentDescription="@string/aufnehmen"
                android:focusable="true"
                android:foregroundGravity="center_vertical" /-->

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/button_voice_record_animated"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:focusable="true"
                app:lottie_rawRes="@raw/click_to_record"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"/>

            <LinearLayout
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button_OK"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:text="@string/berpr_fen" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/richtig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="#96d84f"
        app:cardCornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionCard1"
        app:layout_constraintBottom_toTopOf="@id/bottombar"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/solution_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="45dp"
                android:paddingTop="10dp"
                android:text="@string/richtig"
                android:textAlignment="center"
                android:textColor="#426e13"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/solution_text_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="45dp"
                android:paddingBottom="10dp"
                android:text="@string/food_essen"
                android:textAlignment="center"
                android:textColor="#426e13"
                android:textSize="20sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/falsch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="#a94747"
        app:cardCornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionCard1"
        app:layout_constraintBottom_toTopOf="@id/bottombar"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/solution_wrong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="45dp"
                android:paddingTop="10dp"
                android:text="@string/falsch"
                android:textAlignment="center"
                android:textColor="#450909"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/solution_text_wrong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="45dp"
                android:paddingBottom="10dp"
                android:text="@string/food_essen"
                android:textAlignment="center"
                android:textColor="#450909"
                android:textSize="20sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/quizleft"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/previous_button"
            android:focusable="true"
            android:scaleType="fitXY"
            android:src="@drawable/quizleft" />

        <ImageButton
            android:id="@+id/quizright"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/next_button"
            android:focusable="true"
            android:scaleType="fitXY"
            android:src="@drawable/quizright" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#7fbfbf"
        app:cardCornerRadius="5dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="@id/bottombar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottombar">

        <TextView
            android:id="@+id/points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="5dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="8dp"
            android:text="@string/_0"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/quizpoints" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>